--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -2,6 +2,66 @@
 % Encoding: UTF8
 
 
+@article{bilgic2012accelerated,
+author = {Bilgic, B. and Setsompop, K. and Cohen-Adad, J. and Yendiki, A. and Wald, L.L. and Adalsteinsson, E.},
+title = {Accelerated diffusion spectrum imaging with compressed sensing using adaptive dictionaries},
+journal = {Magnetic Resonance in Medicine},
+volume = {68},
+number = {6},
+publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+issn = {1522-2594},
+url = {http://dx.doi.org/10.1002/mrm.24505},
+doi = {10.1002/mrm.24505},
+pages = {1747--1754},
+keywords = {diffusion spectrum imaging, compressed sensing, adaptive dictionary},
+year = {2012},
+}
+
+@Article{	  menzel-tan-etal:11,
+  author		      = {M.I. Menzel and E.T. Tan and K. Khare and J.I. Sperl and K.F. King and
+				X. Tao and C.J. Hardy and L. Marinelli},
+  title			      = {Accelerated diffusion spectrum imaging in the human brain using compressed sensing},
+  journal		      = {Magnetic Resonance in Medicine},
+  year			      = {2011},
+  volume		      = {66},
+  pages			      = {1226--1233},
+  month			      = nov,
+  topic			      = {misc},
+  owner			      = {smerlet},
+  group			      = {Other},
+  x-editorial-board	      = {yes},
+  x-international-audience    = {yes},
+  doi			      = {10.1002/mrm.23064},
+  x-pays		      = {}
+}
+
+
+@article{Setsompop2012569,
+title = "Improving diffusion MRI using simultaneous multi-slice echo planar imaging",
+journal = "NeuroImage",
+volume = "63",
+number = "1",
+pages = "569 - 580",
+year = "2012",
+note = "",
+issn = "1053-8119",
+doi = "10.1016/j.neuroimage.2012.06.033",
+url = "http://www.sciencedirect.com/science/article/pii/S1053811912006477",
+author = "K. Setsompop and J. Cohen-Adad and B.A. Gagoski and T. Raij and A. Yendiki and B. Keil and V.J. Wedeen and L.L. Wald",
+keywords = "Diffusion MRI",
+keywords = "Simultaneous multi-slice",
+keywords = "CAIPIRINHA",
+keywords = "Parallel imaging"
+}
+
+@article{gramfort-etal-media:13,
+  author = {Gramfort, A. and  Poupon, C. and Descoteaux, M.},
+  title	 = {Denoising and fast diffusion imaging with physically constrained sparse dictionary learning}, 
+  journal = {Medical Image Analysis},
+  year = {2013},
+  pages	= {in press}
+}
+
 
 @article{Beaulieu2002,
 abstract = {Anisotropic water diffusion in neural fibres such as nerve, white matter in spinal cord, or white matter in brain forms the basis for the utilization of diffusion tensor imaging (DTI) to track fibre pathways. The fact that water diffusion is sensitive to the underlying tissue microstructure provides a unique method of assessing the orientation and integrity of these neural fibres, which may be useful in assessing a number of neurological disorders. The purpose of this review is to characterize the relationship of nuclear magnetic resonance measurements of water diffusion and its anisotropy (i.e. directional dependence) with the underlying microstructure of neural fibres. The emphasis of the review will be on model neurological systems both in vitro and in vivo. A systematic discussion of the possible sources of anisotropy and their evaluation will be presented followed by an overview of various studies of restricted diffusion and compartmentation as they relate to anisotropy. Pertinent pathological models, developmental studies and theoretical analyses provide further insight into the basis of anisotropic diffusion and its potential utility in the nervous system.},
@@ -206,6 +266,24 @@ pmid = {22770597},
 title = {{Super-resolution reconstruction to increase the spatial resolution of diffusion weighted images from orthogonal anisotropic acquisitions.}},
 url = {http://dx.doi.org/10.1016/j.media.2012.05.003},
 volume = {16},
+year = {2012}
+}
+
+@article{garyfallidis-etal:12,
+author = {Garyfallidis, Eleftherios and Brett, Matthew and Correia, Marta Morgado and Williams, Guy B and Nimmo-Smith, Ian},
+doi = {10.3389/fnins.2012.00175},
+issn = {1662-453X},
+journal = {Frontiers in neuroscience},
+keywords = {DTI.,Fiber clustering,White matter Segmentation,clustering algorithms,diffusion MRI,dimensionality reduction,streamline clustering,tractography},
+language = {English},
+month = jan,
+number = {175},
+pages = {1--13},
+pmid = {23248578},
+publisher = {Frontiers},
+title = {{QuickBundles, a Method for Tractography Simplification.}},
+url = {http://www.frontiersin.org/Journal/10.3389/fnins.2012.00175/abstract},
+volume = {6},
 year = {2012}
 }
 
@@ -1652,7 +1730,7 @@ author = "Paul A. Yushkevich and Hongzhi Wang and John Pluta and Sandhitsu R. Da
 }
 
 @article{Calamante20101233,
-title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping",
+title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping", 
 journal = "NeuroImage",
 volume = "53",
 number = "4",
@@ -6943,6 +7021,18 @@ year = {2010}
   timestamp = {2007.12.03}
 }
 
+@article{jones-etal:13,
+author = {Jones, Derek K. and Kn\"{o}sche, Thomas R. and Turner, Robert},
+issn = {10538119},
+journal = {NeuroImage},
+month = jul,
+pages = {239--254},
+title = {{White Matter Integrity, Fiber Count, and Other Fallacies: The Do's and Don'ts of Diffusion MRI}},
+url = {http://dx.doi.org/10.1016/j.neuroimage.2012.06.081},
+volume = {73},
+year = {2013}
+}
+
 @ARTICLE{jones-etal:99,
   author = {D. K. Jones and M. A. Horsfield and A. Simmons},
   title = {Optimal strategies for measuring diffusion in anisotropic systems
@@ -10215,6 +10305,19 @@ year = {1999}
   file = {:schamahmann-wedeen-brain07.pdf:PDF},
   owner = {ripcurl},
   timestamp = {2007.06.19}
+}
+
+@Article{wedeen2005mapping,
+  Author         = {Wedeen, V.J. and Hagmann, P. and Tseng, W.Y.I. and
+                   Reese, T.G. and Weisskoff, R.M.},
+  Title          = {Mapping complex tissue architecture with diffusion
+                   spectrum magnetic resonance imaging},
+  Journal        = {Magnetic Resonance in Medicine},
+  Volume         = {54},
+  Number         = {6},
+  Pages          = {1377--1386},
+  publisher      = {Wiley Online Library},
+  year           = 2005
 }
 
 @ARTICLE{Schmid2009,
